--- a/package.json
+++ b/package.json
@@ -13,14 +13,16 @@
   "devDependencies": {
     "@types/jest": "^26.0.20",
     "@types/node": "^14.14.25",
-    "@typescript-eslint/eslint-plugin": "^4.14.2",
+    "@typescript-eslint/eslint-plugin": "^4.15.0",
+    "@typescript-eslint/parser": "^4.15.0",
     "eslint": "^7.19.0",
+    "eslint-config-standard": "^16.0.2",
     "eslint-config-standard-with-typescript": "^11.0.0",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.2.1",
     "git-commit-msg-linter": "^3.0.0",
-    "husky": "^4.3.8",
+    "husky": "^5.0.9",
     "jest": "^26.6.3",
     "lint-staged": "^10.5.4",
     "ts-jest": "^26.5.0",
