--- a/package.json
+++ b/package.json
@@ -27,5 +27,16 @@
     "lint-staged": "^10.5.4",
     "ts-jest": "^26.5.0",
     "typescript": "^4.1.3"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.ts": [
+      "eslint . --fix",
+      "npm run test:staged"
+    ]
   }
 }
