--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "private": true,
   "scripts": {
     "test": "jest --passWithNoTests",
-    "test:staged": "jest --passWithNoTests"
+    "test:staged": "jest --passWithNoTests",
+    "postinstall": "husky install"
   },
   "keywords": [],
   "author": "",
@@ -28,15 +30,15 @@
     "ts-jest": "^26.5.0",
     "typescript": "^4.1.3"
   },
+  "lint-staged": {
+    "src/**/*.ts": [
+      "eslint . --fix",
+      "npm run test:staged"
+    ]
+  },
   "husky": {
     "hooks": {
       "pre-commit": "lint-staged"
     }
-  },
-  "lint-staged": {
-    "*.ts": [
-      "eslint . --fix",
-      "npm run test:staged"
-    ]
   }
 }
