test: ensure SignUpController returns 400 if no name is provided

--- a/package.json
+++ b/package.json
@@ -31,14 +31,14 @@
     "typescript": "^4.1.3"
   },
   "lint-staged": {
-    "src/**/*.ts": [
+    "**/*.ts": [
       "eslint . --fix",
       "npm run test:staged"
     ]
   },
   "husky": {
     "hooks": {
-      "pre-commit": "lint-staged"
+      "pre-commit": "npx lint-staged"
     }
   }
 }
