--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.2.1",
     "git-commit-msg-linter": "^3.0.0",
-    "husky": "^5.0.9",
+    "husky": "^4.2.3",
     "jest": "^26.6.3",
     "lint-staged": "^10.5.4",
     "ts-jest": "^26.5.0",
@@ -38,7 +38,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "npx lint-staged"
+      "pre-commit": "lint-staged"
     }
   }
 }
